syntax = "proto3";

package v2ray.core.app.stats.command;

option optimize_for = LITE_RUNTIME;

message GetStatsRequest
{
    // Name of the stat counter.
    string name = 1;
    // Whether or not to reset the counter to fetching its value.
    bool reset = 2;
}

message Stat
{
    string name = 1;
    int64 value = 2;
}

message GetStatsResponse
{
    Stat stat = 1;
}

message QueryStatsRequest
{
    string pattern = 1;
    bool reset = 2;
}

message QueryStatsResponse
{
    repeated Stat stat = 1;
}

service StatsService
{
    rpc GetStats(GetStatsRequest) returns (GetStatsResponse);
    rpc QueryStats(QueryStatsRequest) returns (QueryStatsResponse);
}
